# team-bridge

./: Dockerfile  app.py  docker-compose.yaml  pyproject.toml
db/: __init__.py  db_interaction.py  models.py
templates/: add_knowledge.json  missing_knowledge.json  request_knowledge.json
