[tool.poetry]
name = "team-bridge"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "team_bridge"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
slack-bolt = "^1.18.0"
sqlalchemy = "^2.0.15"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
